compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/ExplicitFieldGettersAndSetters.kt
package test

import java.util.*

public open class ExplicitFieldGettersAndSetters : Object() {
    public var foo : String? = ""
}
